--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kai Brach"
-  avatar           : "profile.png"
+  avatar           : "me.jpg"
   bio              : ""PhD researcher || uncertainty in deep learning || HTWG Konstanz - University of Applied Sciences""
   location         : "Konstanz"
   employer         :
