--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Kai Brach"
   avatar           : "me.jpg"
-  bio              : ""PhD researcher || uncertainty in deep learning || HTWG Konstanz - University of Applied Sciences""
+  bio              : "PhD researcher || uncertainty in deep learning || HTWG Konstanz - University of Applied Sciences"
   location         : "Konstanz"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
